Refactor AppointmentService to remove unused methods and enhance appointment visibility logic. Update booking process to require user information and improve error handling. Add tests for appointment visibility and booking scenarios, ensuring proper user authorization and data integrity.